<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BMI_Analyzer"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="arial"
        android:textFontWeight="700"
        android:textAlignment="center"
        android:background="@color/blue"
        android:padding="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textColor="#4A4848"
        android:textSize="28sp"
        android:fontFamily="arial"
        android:textFontWeight="700"
        android:textAlignment="center"
        android:lineSpacingExtra="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_status"
        android:textColor="@color/blue"
        android:fontFamily="arial"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="15dp"
        />

     <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
         android:typeface="normal"

     android:hint="Normal (stil Good)"
     android:layout_marginTop="10dp"
     android:layout_marginStart="40dp"
     android:layout_marginEnd="40dp"
         android:textAlignment="center"

    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_status"
        android:textColor="@color/blue"
        android:fontFamily="arial"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="15dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="45dp"
        android:background="@color/blue"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="30dp">


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:fontFamily="arial"
        android:text="@string/add_food_button"
        android:textFontWeight="700"
        android:textSize="18dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:fontFamily="arial"
        android:text="@string/add_record_button"
        android:textFontWeight="700"
        android:textSize="18dp"
        android:padding="10dp"/>



</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_button"
        android:backgroundTint="@color/blue"
        android:textSize="20sp"
        android:fontFamily="arial"
        android:textFontWeight="700"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="arial"
        android:textFontWeight="400"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />


    <TextView
        android:layout_width="45dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_gravity="center"
        />


</LinearLayout>